kubernetes/apps/apps/track/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track
  labels:
    app: track
spec:
  replicas: 1
  selector:
    matchLabels:
      app: track
  template:
    metadata:
      labels:
        app: track
    spec:
      containers:
        - name: track
          image: markuseisl00/track:1.0.1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
