kubernetes/apps/apps/track/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: track
  labels:
    app: track
spec:
  type: ClusterIP
  selector:
    app: track
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: web
