kubernetes/apps/apps/track/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "track.cloud.traunseenet.com"
    external-dns.alpha.kubernetes.io/target: "10.0.0.100"
spec:
  tls:
    - hosts:
        - track.cloud.traunseenet.com
      secretName: track-cert
  ingressClassName: traefik
  rules:
    - host: track.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: track
                port:
                  name: web
